static/scss/row_header_bp1.scss
.header {
  height: rem(320);
  
  .header-details {
    bottom: rem(20);
  }
  
  .link { 
    font-size: rem(12);
  }
  
  .h-4 {
    font-size: rem(14);
  }
  
  .h-1 {
    font-size: rem(32);
    margin-bottom: rem(10);
    line-height: 1.2;
  }
}

.header-small {
  height: rem(75);
  margin-bottom: rem(30);
}

.header-feature {

  .header-feature-bg {
    background-size: rem(800) auto;
  }

  .header-feature-category {
    margin-bottom: rem(40);
    
    .icon-close {
      font-size: 14px;
      margin: 0 rem(10);
    }
    
    .category-logo {
      width: rem(70);
    }
  }
}

.header-feature,
.header-carousel .header-carousel-slides,
.header-gallery .header-gallery-wrap,
.nav-active {
  height: rem(400);
}

.header-category {
  height: rem(150);
  
  .header-category-h1 {
    font-size: 22px;
    margin-bottom: rem(10);
  }
  .header-category-h2,
  .header-category-branded .header-category-h2 {
    display: none;
  }

  .header-category-branded {
    bottom: rem(12);
    right: rem(5);
    img {
      width: rem(90);
    }
  }
}

.header-gallery {
  &.header-gallery-thumbs-active {
    height: rem(550);
  }

  .header-content {
    width: 100%;
    margin-top: rem(-18);
  }

  .header-gallery-controls {
    bottom: rem(74);
  }
}


.nav {

  .logo {
    margin-top: rem(15);
    width: rem(58);
    height: rem(44);
  }
 
  .nav-menu, .nav-item {
    margin-top: rem(20);
  }

  .nav-links {
    top: rem(53);
    margin-left: rem(-160);
    width: rem(320);
    
    .nav-links-primary li {
      font-size: rem(20);
      margin: 0 0 rem(30) 0; 
    }

    .nav-links-secondary {
      margin-top: rem(40);
    }

    .nav-links-secondary li {
      font-size: rem(14);
      margin: 0 rem(20); 
    }
  }
}

